--- a/assets/scss/base/base.scss
+++ b/assets/scss/base/base.scss
@@ -1,14 +1,20 @@
-*, ::before, ::after {
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+ 
+   
 }
 
+
+
 body {
-    margin: var(--header-height) 0 0 0;
+    // margin: var(--header-height);
     font-family: var(--paragraph-font);
     font-size: var(--paragraph-font-size);
     background-color: var(--body-color);
+    overflow-x: hidden;
+
 }
 
 h1, h2 {
@@ -28,4 +34,5 @@ img {
 ul {
     list-style-type: none;
 }
+
 
