--- a/assets/scss/layout/layout.scss
+++ b/assets/scss/layout/layout.scss
@@ -1,5 +1,8 @@
-.container {
-    max-width: 1600px;
+// .container {
+//     position: relative;
+//     max-width: 1600px;
+//     
     
-}
+    
+// }
 
